plugins {
    // Apply the java plugin to add support for Java
    id 'java'

    // Apply the application plugin to add support for building a CLI application.
    id 'application'
}

group 'org.cc'
version '1.0-SNAPSHOT'
sourceCompatibility = 1.8

repositories {
    // Use jcenter for resolving dependencies.
    // You can declare any Maven/Ivy/file repository here.
    jcenter()
}

dependencies {
    // This dependency is used by the application.
    implementation 'com.google.guava:guava:29.0-jre'
    implementation 'net.sourceforge.jtds:jtds:1.3.1'
    implementation 'org.apache.logging.log4j:log4j-slf4j-impl:2.11.0'
    compileOnly 'org.projectlombok:lombok:1.18.20'
    annotationProcessor 'org.projectlombok:lombok:1.18.20'
    // Use JUnit test framework
    testImplementation 'junit:junit:4.13'
    testImplementation 'org.apache.logging.log4j:log4j-slf4j-impl:2.11.0'
    testCompileOnly 'org.projectlombok:lombok:1.18.20'
	testAnnotationProcessor 'org.projectlombok:lombok:1.18.20'
}

application {
    // Define the main class for the application.
    mainClassName = 'org.cc.App'
}

tasks.withType(JavaCompile) {  
    options.encoding = "UTF-8"  
}

